-*- text -*-

Version 0.2.3 (2013-10-09)
-------------------------

* Parameters other than the location parameter can now have covariates
  on them in flexsurvreg.  Thanks to Milan Bouchet-Valat for help with
  this.

* subset and na.action arguments in flexsurvreg and flexsurvspline.

* Distribution functions for generalized gamma, generalized F, and
  Gompertz, now allow all parameters to be vectorised.

* Bug fix in analytic derivatives for Weibull.

* Restored print output introduced in 0.1.2 which had been
  accidentally removed in 0.1.5.


Version 0.2.2 (2013-07-26)
-------------------------

* R-forge only release.

* Case weights supported in flexsurvreg and flexsurvspline.


Version 0.2.1 (2013-07-03)
-------------------------

* R-forge only release.

* Default left truncation times were being set wrongly for
  user-supplied times in summary.flexsurvreg, giving wrong confidence
  intervals.  These now default to 0.

* Confidence intervals set to 1 for t=0 under spline models. Thanks to
  Paul Pynsent.

* dgompertz,dgengamma,dgengamma.orig,dgenf,dgenf.orig fixed to return
  -Inf instead of 0 when density is zero and log=TRUE.  Thanks to Gao
  Zheng.


Version 0.2 (2013-05-13)
-------------------------

* New summary() method for fitted flexsurvreg and flexsurvspline model
  objects gives fitted survival, cumulative hazard or hazard curves,
  with confidence intervals mosly computed by a simulation method.

* This allows plot.flexsurvreg to plot confidence intervals for the
  fitted survival, hazard or cumulative hazard.

* Left-truncated survival observations are supported in flexsurvreg
  and flexsurvspline.

* New psurvspline and dsurvspline functions giving distribution and
  density function for the spline model.

* Analytic derivatives used in optimisation for spline (odds and
  hazard scale, not normal), exponential, Weibull and Gompertz models.

* Default to BFGS optimisation method, which uses derivatives where