@@ -49,3 +49,4 @@ S3method(print, flexsurvreg)
 S3method(plot, flexsurvreg)
 S3method(lines, flexsurvreg)
 S3method(summary, flexsurvreg)
+S3method(vcov, flexsurvreg)
