@@ -12,13 +12,11 @@ Dminusloglik.flexsurv <- function(optpars, Y, X=0, weights, dlist, inits, mx, fi
     ncovs <- length(pars) - length(dlist$pars)
     if (ncovs > 0)
         beta <- unlist(pars[(nbpars+1):npars])
-    for (i in dlist$pars) { 
+    for (i in dlist$pars) {
         if (length(mx[[i]]) > 0)
             pars[[i]] <- pars[[i]] + X[,mx[[i]],drop=FALSE] %*% beta[mx[[i]]]
-        else 
+        else
             pars[[i]] <- rep(pars[[i]], length(Y[,"stop"]))
-#        pars[[dlist$location]] <- pars[[dlist$location]] + X %*% beta
-#        pars[[dlist$location]] <- rep(pars[[dlist$location]], length(Y[,"stop"]))
     }
     ddfn <- paste("DLd",dlist$name,sep="")
     dead <- Y[,"status"]==1
@@ -35,8 +33,6 @@ Dminusloglik.flexsurv <- function(optpars, Y, X=0, weights, dlist, inits, mx, fi
         ddcall[[i]] <- ddcall[[i]][dead]
         dsccall[[i]] <- dsccall[[i]][!dead]
     }
-#    ddcall[[dlist$location]] <- ddcall[[dlist$location]][dead]
-#    dsccall[[dlist$location]] <- dsccall[[dlist$location]][!dead]
     dd <- do.call(ddfn, ddcall) * weights[dead]
     dscens <- do.call(dsfn, dsccall) * weights[!dead]
     dstrunc <- do.call(dsfn, dstcall) * weights
@@ -57,7 +53,7 @@ DLdexp <- function(t, rate, X, mx){
     ts <- 1 - t*rate
     res[,1] <- ts
     for (i in seq_along(mx$rate))
-        res[,1+i] <- X[,mx$rate[i]]*res[,1] 
+        res[,1+i] <- X[,mx$rate[i]]*res[,1]
     res
 }
 
@@ -66,7 +62,7 @@ DLSexp <- function(t, rate, X, mx){
     res <- matrix(nrow=length(t), ncol=1 + ncovs)
     res[,1] <- -t*rate
     for (i in seq_along(mx$rate))
-        res[,1+i] <- X[,mx$rate[i]]*res[,1] 
+        res[,1+i] <- X[,mx$rate[i]]*res[,1]
     res
 }
 
@@ -79,7 +75,7 @@ DLdweibull <- function(t, shape, scale, X, mx){
     res[,1] <- 1 + shape*(log(t/scale) - log(t/scale)*tss) # wrt log shape
     res[,2] <- -1 - (shape-1) + shape*tss
     for (i in seq_along(mx$scale))
-        res[,2+i] <- X[,mx$scale[i]]*res[,2] 
+        res[,2+i] <- X[,mx$scale[i]]*res[,2]
     for (i in seq_along(mx$shape))
         res[,2+length(mx$scale)+i] <- X[,mx$shape[i]]*res[,1]
    res
@@ -92,7 +88,7 @@ DLSweibull <- function(t, shape, scale, X, mx){
     res[,1] <- ifelse(t==0, 0, -shape*log(t/scale)*tss)
     res[,2] <- tss*shape
     for (i in seq_along(mx$scale))
-        res[,2+i] <- X[,mx$scale[i]]*res[,2] 
+        res[,2+i] <- X[,mx$scale[i]]*res[,2]
     for (i in seq_along(mx$shape))
         res[,2+length(mx$scale)+i] <- X[,mx$shape[i]]*res[,1]
     res
@@ -112,7 +108,7 @@ DLdgompertz <- function(t, shape, rate, X, mx){
     res[shape!=0,1] <- t + rs*(1/shape - t) - rate/shape^2
     res[shape!=0,2] <- 1 - rs + rate/shape
     for (i in seq_along(mx$rate))
-        res[,2+i] <- X[,mx$rate[i]]*res[,2] 
+        res[,2+i] <- X[,mx$rate[i]]*res[,2]
     for (i in seq_along(mx$shape))
         res[,2+length(mx$rate)+i] <- X[,mx$shape[i]]*res[,1]
     res
@@ -129,7 +125,7 @@ DLSgompertz <- function(t, shape, rate, X, mx){
     res[shape!=0,1] <- rs*(1/shape - t) - rate/shape^2
     res[shape!=0,2] <-  - rs + rate/shape
     for (i in seq_along(mx$rate))
-        res[,2+i] <- X[,mx$rate[i]]*res[,2] 
+        res[,2+i] <- X[,mx$rate[i]]*res[,2]
     for (i in seq_along(mx$shape))
         res[,2+length(mx$rate)+i] <- X[,mx$shape[i]]*res[,1]
     res
